general docs configuration
